minikube/dev-ms/dev-auth-server/dev-auth-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-auth-server
  labels:
    app: dev-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-auth-server
  template:
    metadata:
      labels:
        app: dev-auth-server
    spec:
      containers:
        - name: dev-auth-server
          image: dev-auth-server:1.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
