minikube/dev-ms/dev-auth-server/dev-auth-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-auth-server-service
spec:
  selector:
    app: dev-auth-server
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
