minikube/dev-ms/dev-auth-server/dev-auth-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-auth-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-auth-server
                port:
                  number: 8000
